--- a/about.html
+++ b/about.html
@@ -32,14 +32,14 @@
 	<div id="colorlib-page">
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
 		<aside id="colorlib-aside" role="complementary" class="js-fullheight text-center">
-			<h1 id="colorlib-logo"><a href="index.html">elen<span>.</span></a></h1>
+			<h1 id="colorlib-logo"><a href="index.html">violet<span>.</span></a></h1>
 			<nav id="colorlib-main-menu" role="navigation">
 				<ul>
 					<li><a href="index.html">Home</a></li>
+          <li class="colorlib-active"><a href="about.html">About</a></li>
 					<li><a href="photography.html">Photography</a></li>
 					<li><a href="travel.html">Travel</a></li>
 					<li><a href="fashion.html">Fashion</a></li>
-					<li class="colorlib-active"><a href="about.html">About</a></li>
 					<li><a href="contact.html">Contact</a></li>
 				</ul>
 			</nav>
@@ -48,9 +48,9 @@
 				<p>
 				<ul>
 					<li><a href="#"><i class="icon-facebook"></i></a></li>
-					<li><a href="#"><i class="icon-twitter"></i></a></li>
+					<li><a href="https://twitter.com/violetsinn"><i class="icon-twitter"></i></a></li>
 					<li><a href="#"><i class="icon-instagram"></i></a></li>
-					<li><a href="#"><i class="icon-linkedin"></i></a></li>
+					<li><a href="https://www.linkedin.com/in/vasinnarkar/"><i class="icon-linkedin"></i></a></li>
 				</ul>
 			</div>
 		</aside>
