retrying to upload image

--- a/index.html
+++ b/index.html
@@ -47,10 +47,9 @@
 
 			<div class="colorlib-footer">
 				<ul>
-					<li><a href="#"><i class="icon-facebook"></i></a></li>
-					<li><a href="#"><i class="icon-twitter"></i></a></li>
-					<li><a href="#"><i class="icon-instagram"></i></a></li>
-					<li><a href="#"><i class="icon-linkedin"></i></a></li>
+          <li><a href="https://twitter.com/violetsinn"><i class="icon-twitter"></i></a></li>
+					<li><a href="https://www.linkedin.com/in/vasinnarkar/"><i class="icon-linkedin"></i></a></li>
+          <li><a href="https://github.com/violetsinn"><i class="icon-github"></i></a></li>
 				</ul>
 			</div>
 		</aside> <!-- END COLORLIB-ASIDE -->
@@ -62,8 +61,8 @@
 						<div class="img mb-4" style="background-image: url(images/author.jpg);"></div>
 						<div class="desc">
 							<h2 class="subheading">Hello I'm</h2>
-							<h1 class="mb-4">Elen Henderson</h1>
-							<p class="mb-4">I am A Blogger Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+							<h1 class="mb-4">Violet Sinnnarkar</h1>
+							<p class="mb-4">I am a student at UC Berkeley. My website is under construction.</p>
 							<p><a href="#" class="btn-custom">More About Me <span class="ion-ios-arrow-forward"></span></a></p>
 						</div>
 					</div>
