so i misspelled my own name... whoops

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 						<div class="img mb-4" style="background-image: url(images/author.jpg);"></div>
 						<div class="desc">
 							<h2 class="subheading">Hello I'm</h2>
-							<h1 class="mb-4">Violet Sinnnarkar</h1>
+							<h1 class="mb-4">Violet Sinnarkar</h1>
 							<p class="mb-4">I am a student at UC Berkeley. My website is under construction.</p>
 							<p><a href="#" class="btn-custom">More About Me <span class="ion-ios-arrow-forward"></span></a></p>
 						</div>
@@ -91,11 +91,6 @@
 	            	</div>
 	              <div class="meta-wrap align-items-center">
 	              	<div class="half order-md-last">
-		              	<p class="meta">
-		              		<span><i class="icon-heart"></i>3</span>
-		              		<span><i class="icon-eye"></i>100</span>
-		              		<span><i class="icon-comment"></i>5</span>
-		              	</p>
 	              	</div>
 	              	<div class="half">
 		              	<p><a href="#" class="btn py-2">Continue Reading <span class="ion-ios-arrow-forward"></span></a></p>
@@ -120,11 +115,6 @@
 	            	</div>
 	              <div class="meta-wrap align-items-center">
 	              	<div class="half order-md-last">
-		              	<p class="meta">
-		              		<span><i class="icon-heart"></i>3</span>
-		              		<span><i class="icon-eye"></i>100</span>
-		              		<span><i class="icon-comment"></i>5</span>
-		              	</p>
 	              	</div>
 	              	<div class="half">
 		              	<p><a href="#" class="btn py-2">Continue Reading <span class="ion-ios-arrow-forward"></span></a></p>
@@ -149,11 +139,6 @@
 	            	</div>
 	              <div class="meta-wrap align-items-center">
 	              	<div class="half order-md-last">
-		              	<p class="meta">
-		              		<span><i class="icon-heart"></i>3</span>
-		              		<span><i class="icon-eye"></i>100</span>
-		              		<span><i class="icon-comment"></i>5</span>
-		              	</p>
 	              	</div>
 	              	<div class="half">
 		              	<p><a href="#" class="btn py-2">Continue Reading <span class="ion-ios-arrow-forward"></span></a></p>
@@ -178,11 +163,6 @@
 	            	</div>
 	              <div class="meta-wrap align-items-center">
 	              	<div class="half order-md-last">
-		              	<p class="meta">
-		              		<span><i class="icon-heart"></i>3</span>
-		              		<span><i class="icon-eye"></i>100</span>
-		              		<span><i class="icon-comment"></i>5</span>
-		              	</p>
 	              	</div>
 	              	<div class="half">
 		              	<p><a href="#" class="btn py-2">Continue Reading <span class="ion-ios-arrow-forward"></span></a></p>
@@ -207,11 +187,6 @@
 	            	</div>
 	              <div class="meta-wrap align-items-center">
 	              	<div class="half order-md-last">
-		              	<p class="meta">
-		              		<span><i class="icon-heart"></i>3</span>
-		              		<span><i class="icon-eye"></i>100</span>
-		              		<span><i class="icon-comment"></i>5</span>
-		              	</p>
 	              	</div>
 	              	<div class="half">
 		              	<p><a href="#" class="btn py-2">Continue Reading <span class="ion-ios-arrow-forward"></span></a></p>
@@ -236,11 +211,6 @@
 	            	</div>
 	              <div class="meta-wrap align-items-center">
 	              	<div class="half order-md-last">
-		              	<p class="meta">
-		              		<span><i class="icon-heart"></i>3</span>
-		              		<span><i class="icon-eye"></i>100</span>
-		              		<span><i class="icon-comment"></i>5</span>
-		              	</p>
 	              	</div>
 	              	<div class="half">
 		              	<p><a href="#" class="btn py-2">Continue Reading <span class="ion-ios-arrow-forward"></span></a></p>
@@ -265,11 +235,6 @@
 	            	</div>
 	              <div class="meta-wrap align-items-center">
 	              	<div class="half order-md-last">
-		              	<p class="meta">
-		              		<span><i class="icon-heart"></i>3</span>
-		              		<span><i class="icon-eye"></i>100</span>
-		              		<span><i class="icon-comment"></i>5</span>
-		              	</p>
 	              	</div>
 	              	<div class="half">
 		              	<p><a href="#" class="btn py-2">Continue Reading <span class="ion-ios-arrow-forward"></span></a></p>
@@ -294,11 +259,6 @@
 	            	</div>
 	              <div class="meta-wrap align-items-center">
 	              	<div class="half order-md-last">
-		              	<p class="meta">
-		              		<span><i class="icon-heart"></i>3</span>
-		              		<span><i class="icon-eye"></i>100</span>
-		              		<span><i class="icon-comment"></i>5</span>
-		              	</p>
 	              	</div>
 	              	<div class="half">
 		              	<p><a href="#" class="btn py-2">Continue Reading <span class="ion-ios-arrow-forward"></span></a></p>
@@ -323,11 +283,6 @@
 	            	</div>
 	              <div class="meta-wrap align-items-center">
 	              	<div class="half order-md-last">
-		              	<p class="meta">
-		              		<span><i class="icon-heart"></i>3</span>
-		              		<span><i class="icon-eye"></i>100</span>
-		              		<span><i class="icon-comment"></i>5</span>
-		              	</p>
 	              	</div>
 	              	<div class="half">
 		              	<p><a href="#" class="btn py-2">Continue Reading <span class="ion-ios-arrow-forward"></span></a></p>
@@ -352,11 +307,6 @@
 	            	</div>
 	              <div class="meta-wrap align-items-center">
 	              	<div class="half order-md-last">
-		              	<p class="meta">
-		              		<span><i class="icon-heart"></i>3</span>
-		              		<span><i class="icon-eye"></i>100</span>
-		              		<span><i class="icon-comment"></i>5</span>
-		              	</p>
 	              	</div>
 	              	<div class="half">
 		              	<p><a href="#" class="btn py-2">Continue Reading <span class="ion-ios-arrow-forward"></span></a></p>
@@ -381,11 +331,6 @@
 	            	</div>
 	              <div class="meta-wrap align-items-center">
 	              	<div class="half order-md-last">
-		              	<p class="meta">
-		              		<span><i class="icon-heart"></i>3</span>
-		              		<span><i class="icon-eye"></i>100</span>
-		              		<span><i class="icon-comment"></i>5</span>
-		              	</p>
 	              	</div>
 	              	<div class="half">
 		              	<p><a href="#" class="btn py-2">Continue Reading <span class="ion-ios-arrow-forward"></span></a></p>
@@ -410,11 +355,6 @@
 	            	</div>
 	              <div class="meta-wrap align-items-center">
 	              	<div class="half order-md-last">
-		              	<p class="meta">
-		              		<span><i class="icon-heart"></i>3</span>
-		              		<span><i class="icon-eye"></i>100</span>
-		              		<span><i class="icon-comment"></i>5</span>
-		              	</p>
 	              	</div>
 	              	<div class="half">
 		              	<p><a href="#" class="btn py-2">Continue Reading <span class="ion-ios-arrow-forward"></span></a></p>
