changing to index

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 		<nav>
     		<ul>
-	        <li><b><a href="home.html">Home</a></b></li>
+	        <li><b><a href="index.html">Home</a></b></li>
 					<li><a href="about.html">About</a></li>
 					<li><a href="projects.html">Projects</a></li>
 					<li><a href="blog.html">Blog</a></li>
