--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 
 		<nav>
     		<ul>
-					<li><a href="home.html">Home</a></li>
+					<li><a href="index.html">Home</a></li>
 					<li><b><a href="about.html">About</a></b></li>
 					<li><a href="projects.html">Projects</a></li>
 					<li><a href="blog.html">Blog</a></li>
