--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
 
 	<head>
@@ -19,23 +18,14 @@
     		</ul>
 		</nav>
 
-		<div class="container">
-
 <p><img src="profile.jpg" alt="Photo" class="leftside_image" /></p>
 
-<p>I am a senior at the University of California, Berkeley studying Data
-	Science, with broad interests in distributed computing, optimization, and
-	machine learning.</p>
+<p>I am a senior at the University of California, Berkeley studying Data Science, with broad interests in distributed computing, optimization, and machine learning.</p>
 
-<p>This summer, I am working at <a href = "https://www.humana.com/">Humana</a> as an Advanced Analytics Engineering
-	Intern. In the upcoming school year, I will be a research assistant at
-	the <a href = "https://bcht.berkeley.edu/home">Berkeley Center for Health Technology</a> under Professor Christopher Whaley.
-</p>
+<p>This summer, I am working at <a href = "https://www.humana.com/">Humana</a> as an Advanced Analytics Engineering Intern. In the upcoming school year, I will be a research assistant at the <a href = "https://bcht.berkeley.edu/home">Berkeley Center for Health Technology</a> under Professor Christopher Whaley.</p>
 
-<p>In my free time, I enjoy reading, debating, and travelling. I am currently
-	the President of the Debate Society of Berkeley.</p>
+<p>In my free time, I enjoy reading, debating, and travelling. I am currently the President of the Debate Society of Berkeley.</p>
 
-		</div>
 		<footer>
 
 			<div class = "icon">
@@ -60,7 +50,8 @@
 				</a>
 			</div>
 
-    		<p><small>© Violet Sinnarkar 2019</small></p>
+    	<p><small>© Violet Sinnarkar 2019</small></p>
+
 		</footer>
 	</body>
 </html>
