--- a/index.html
+++ b/index.html
@@ -28,27 +28,26 @@
 
 		<footer>
 
-			<div class = "icon">
-				<a href = "https://www.linkedin.com/in/vasinnarkar/" target="_blank">
+
+				<a href = "https://www.linkedin.com/in/vasinnarkar/" target="_blank"><div class = "icon">
 					<object height = 25px width= 25px type="image/svg+xml" data="linkedin.svg">
-					</object>
-
+					</object></div>
 				</a>
-			</div>
 
-			<div class = "icon">
-				<a href = "https://twitter.com/violetsinn" target="_blank">
+
+
+				<a href = "https://twitter.com/violetsinn" target="_blank"><div class = "icon">
 					<object height = 25px width= 25px type="image/svg+xml" data="twitter.svg">
-					</object>
+					</object></div>
 				</a>
-			</div>
 
-			<div class = "icon">
-				<a href = "https://github.com/violetsinn" target="_blank">
+
+
+				<a href = "https://github.com/violetsinn" target="_blank"><div class = "icon">
 					<object height = 25px width= 25px type="image/svg+xml" data="github.svg">
-					</object>
+					</object></div>
 				</a>
-			</div>
+
 
     	<p><small>© Violet Sinnarkar 2019</small></p>
 
