--- a/projects.html
+++ b/projects.html
@@ -26,7 +26,7 @@
 		</div>
 		<footer>
     		<ul>
-    			<li><small>© Violet Sinnarkar</small></li>
+    			<small>© Violet Sinnarkar</small>
 			</ul>
 		</footer>
 	</body>
