--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <p>This summer, I am working at <a href = "https://www.humana.com/">Humana</a> as an Advanced Analytics Engineering Intern. In the upcoming school year, I will be a research assistant at the <a href = "https://bcht.berkeley.edu/home">Berkeley Center for Health Technology</a> under Professor Christopher Whaley.</p>
 
-<p>In my free time, I enjoy reading, debating, and travelling. I am currently the President of the Debate Society of Berkeley.</p>
+<p>In my free time, I enjoy reading, debating, and travelling. I currently serve as the President of the Debate Society of Berkeley.</p>
 
 		<footer>
 
