--- a/credits.html
+++ b/credits.html
@@ -1,5 +1,7 @@
 <html>
 
+	<meta name = "viewport" content = "width=device-width, initial-scale=1.0">
+
 	<head>
 		<title>Violet Sinnarkar</title>
 		<link rel = "stylesheet" type = "text/css" href = "css/main.css">
@@ -24,21 +26,20 @@
 					<li><a href="index.html">Home</a></li>
 					<li><a href="about.html">About</a></li>
 					<li><a href="projects.html">Projects</a></li>
-					<li><b><a href="blog.html">Blog</a></b></li>
+					<li><a href="blog.html">Blog</a></li>
     		</ul>
 		</nav>
 
-		<div class="container">
+		<p>Icons from <a href="flaticon.com">Flat Icon</a>:</p>
+		<ul>
+		 <li>LinkedIn by <a href="https://www.flaticon.com/authors/simpleicon">SimpleIcon</a></li>
+		 <li>GitHub by <a href="https://www.flaticon.com/authors/dave-gandy">Dave Gandy</a></li>
+		 <li>Twitter by <a href="https://www.flaticon.com/authors/elegant-themes">Elegant Themes</a></li>
+	 	</ul>
 
-		<center>
-			<p>This page is currently under construction.</p>
-		</center>
-
-		</div>
 		<footer>
-    		<ul>
-    			<li><small>© Violet Sinnarkar</small></li>
-			</ul>
+			<p><small>© Violet Sinnarkar 2019 | <a href="credits.html"><b>Credits</b></a></small></p>
+
 		</footer>
 	</body>
 </html>
