--- a/about.html
+++ b/about.html
@@ -1,9 +1,21 @@
-<!DOCTYPE html>
 <html>
 
+	<meta name = "viewport" content = "width=device-width, initial-scale=1.0">
+
 	<head>
+
 		<title>Violet Sinnarkar</title>
 		<link rel = "stylesheet" type = "text/css" href = "css/main.css">
+
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-141113114-1"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+		  gtag('config', 'UA-141113114-1');
+		</script>
+
 	</head>
 
 	<body>
@@ -12,22 +24,64 @@
 
 		<nav>
     		<ul>
-					<li><a href="index.html">Home</a></li>
-					<li><b><a href="about.html">About</a></b></li>
+	        <li><a href="index.html">Home</a></b></li>
+					<li><a href="about.html"><b>About</b></a></li>
 					<li><a href="projects.html">Projects</a></li>
 					<li><a href="blog.html">Blog</a></li>
     		</ul>
 		</nav>
 
-		<div class="container">
+		<h2>Education</h2>
 
-<center><p>This page is currently under construction.</p></center>
+			<h3>University of California, Berkeley<span style="float:right;"> May 2020 </span> </h3>
+			<p style="margin-left: 40px">B.A. Data Science</p>
 
-		</div>
+		<h2>Work</h2>
+
+			<h3>Research Assistant<span style="float:right;">Fall 2019</span></h3>
+				<p style="margin-left: 40px">Berkeley Center for Health Technology</p>
+
+			<h3>Advanced Analytics Engineering Intern<span style="float:right;">Summer 2019</span></h3>
+				<p style="margin-left: 40px">Humana Inc.</p>
+
+			<h3>Data Collaborative Research Team Lead<span style="float:right;">Spring 2019</span></h3>
+				<p style="margin-left: 40px">UC Berkeley Division of Data Sciences</p>
+				<p style="margin-left: 50px; font-size: .75em; font-weight:lighter;">Fall 2018: Data Collaborative Research Team Member</p>
+				<p style="margin-left: 50px; font-size: .75em; font-weight:lighter;">Spring 2018: Community Team Lead</p>
+				<p style="margin-left: 50px; font-size: .75em; font-weight:lighter;">Spring 2017: Community Intern</p>
+
+			<h3>Academic Intern<span style="float:right;">Fall 2018</span></h3>
+				<p style="margin-left: 40px">UC Berkeley Department of Electrical Engineering & Computer Sciences </p>
+
+
+
 		<footer>
-    		<ul>
-    			<li><small>© Violet Sinnarkar</small></li>
-			</ul>
+
+			<a href = "https://www.linkedin.com/in/vasinnarkar/" target="_blank">
+				<div class = "icon">
+					<object height = 25px width= 25px type="image/svg+xml" data="linkedin.svg">
+					</object>
+				</div>
+			</a>
+
+			<a href = "https://twitter.com/violetsinn" target="_blank">
+				<div class = "icon">
+					<object height = 25px width= 25px type="image/svg+xml" data="twitter.svg">
+					</object>
+				</div>
+			</a>
+
+			<a href = "https://github.com/violetsinn" target="_blank">
+				<div class = "icon">
+					<object height = 25px width= 25px type="image/svg+xml" data="github.svg">
+					</object>
+				</div>
+			</a>
+
+    	<p><small>© Violet Sinnarkar 2019 | <a href="credits.html">Credits</a></small></p>
+
 		</footer>
+
 	</body>
+
 </html>
