--- a/index.html
+++ b/index.html
@@ -1,8 +1,21 @@
 <html>
 
+	<meta name = "viewport" content = "width=device-width, initial-scale=1.0">
+
 	<head>
+
 		<title>Violet Sinnarkar</title>
 		<link rel = "stylesheet" type = "text/css" href = "css/main.css">
+
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-141113114-1"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+		  gtag('config', 'UA-141113114-1');
+		</script>
+
 	</head>
 
 	<body>
@@ -11,46 +24,48 @@
 
 		<nav>
     		<ul>
-	        <li><b><a href="index.html">Home</a></b></li>
+	        <li><a href="index.html"><b>Home</b></a></li>
 					<li><a href="about.html">About</a></li>
 					<li><a href="projects.html">Projects</a></li>
 					<li><a href="blog.html">Blog</a></li>
     		</ul>
 		</nav>
 
-<p><img src="profile.jpg" alt="Photo" class="leftside_image" /></p>
+	<p><img src="profile.jpg" class="image"/></p>
 
-<p>I am a senior at the University of California, Berkeley studying Data Science, with broad interests in distributed computing, optimization, and machine learning.</p>
+	<p>I am a senior at the University of California, Berkeley studying Data Science, with broad interests in distributed computing, optimization, and machine learning.</p>
 
-<p>This summer, I am working at <a href = "https://www.humana.com/">Humana</a> as an Advanced Analytics Engineering Intern. In the upcoming school year, I will be a research assistant at the <a href = "https://bcht.berkeley.edu/home">Berkeley Center for Health Technology</a> under Professor Christopher Whaley.</p>
+	<p>This summer, I am working at <a href = "https://www.humana.com/">Humana</a> as an Advanced Analytics Engineering Intern. In the upcoming school year, I will be a research assistant at the <a href = "https://bcht.berkeley.edu/home">Berkeley Center for Health Technology</a> under Professor Christopher Whaley.</p>
 
-<p>In my free time, I enjoy reading, debating, and travelling. I currently serve as the President of the Debate Society of Berkeley.</p>
+	<p>In my free time, I enjoy reading, debating, and travelling. I currently serve as the President of the Debate Society of Berkeley.</p>
 
 		<footer>
 
-
-				<a href = "https://www.linkedin.com/in/vasinnarkar/" target="_blank"><div class = "icon">
+			<a href = "https://www.linkedin.com/in/vasinnarkar/" target="_blank">
+				<div class = "icon">
 					<object height = 25px width= 25px type="image/svg+xml" data="linkedin.svg">
-					</object></div>
-				</a>
+					</object>
+				</div>
+			</a>
 
-
-
-				<a href = "https://twitter.com/violetsinn" target="_blank"><div class = "icon">
+			<a href = "https://twitter.com/violetsinn" target="_blank">
+				<div class = "icon">
 					<object height = 25px width= 25px type="image/svg+xml" data="twitter.svg">
-					</object></div>
-				</a>
+					</object>
+				</div>
+			</a>
 
-
-
-				<a href = "https://github.com/violetsinn" target="_blank"><div class = "icon">
+			<a href = "https://github.com/violetsinn" target="_blank">
+				<div class = "icon">
 					<object height = 25px width= 25px type="image/svg+xml" data="github.svg">
-					</object></div>
-				</a>
+					</object>
+				</div>
+			</a>
 
-
-    	<p><small>© Violet Sinnarkar 2019</small></p>
+    	<p><small>© Violet Sinnarkar 2019 | <a href="credits.html">Credits</a></small></p>
 
 		</footer>
+
 	</body>
+
 </html>
