--- a/projects.html
+++ b/projects.html
@@ -4,6 +4,16 @@
 	<head>
 		<title>Violet Sinnarkar</title>
 		<link rel = "stylesheet" type = "text/css" href = "css/main.css">
+
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-141113114-1"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+		  gtag('config', 'UA-141113114-1');
+		</script>
+		
 	</head>
 
 	<body>
