--- a/about.html
+++ b/about.html
@@ -53,7 +53,10 @@
 			<h3>Academic Intern<span style="float:right;">Fall 2018</span></h3>
 				<p style="margin-left: 40px">UC Berkeley Department of Electrical Engineering & Computer Sciences </p>
 
+		<h2>Awards</h2>
 
+			<h3>Undergraduate Library Fellow<span style="float:right;">2019- 2020</span></h3>
+			<h3>National Merit Scholar<span style="float:right;">2019- 2020</span></h3>
 
 		<footer>
 
