pls fix research assistant

--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
 
 		<h2>Work</h2>
 
-			<h3>Research Assistant<span style="float:right;">Fall 2019</span></h3>
+			<h3>Research Assistant<span style="float:right;">Fall 2019</h3></span>
 				<p style="margin-left: 40px">Berkeley Center for Health Technology</p>
 
 			<h3>Advanced Analytics Engineering Intern<span style="float:right;">Summer 2019</span></h3>
