--- a/debate.html
+++ b/debate.html
@@ -31,13 +31,21 @@
     		</ul>
 		</nav>
 
-	<p><img src="profile.jpg" class="leftside_image"/></p>
+		<h2>Leadership</h2>
+			<p style="margin-left: 40px">2019- 2020: President</p>
+			<p style="margin-left: 40px">2018- 2019: Vice President</p>
+			<p style="margin-left: 40px">2017- 2018: Communications Director</p>
 
-	<p>I am a senior at the University of California, Berkeley studying Data Science, with broad interests in distributed computing, optimization, and machine learning.</p>
+		<h2>Accomplishments</h2>
 
-	<p>This summer, I am working at <a href = "https://www.humana.com/" style="color: #8F5E99">Humana</a> as an Advanced Analytics Engineering Intern. In the upcoming school year, I will be a research assistant at the <a href = "https://bcht.berkeley.edu/home" style="color: #8F5E99">Berkeley Center for Health Technology</a> under Professor Christopher Whaley.</p>
+			<h3>2020 Worlds Universities Debating Championship Qualifier</h3>
+				<p style="margin-left: 40px">Assumption University, Bangkok, Thailand</p>
 
-	<p>In my free time, I enjoy <a href = "https://www.goodreads.com/user/show/7741912-violet">reading</a>, debating, and travelling. I currently serve as the President of the <a href="debate.html">Debate Society of Berkeley</a>.</p>
+			<h3>Varsity Finalist</h3>
+				<p style="margin-left: 40px">2019 Penguin Invitational, Dominican University</p>
+
+			<h3>Top Speaker</h3>
+				<p style="margin-left: 40px">5th Annual Steeltown Invitational, Los Medanos College</p>
 
 		<footer>
 
