--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 	<p>This summer, I am working at <a href = "https://www.humana.com/" style="color: #8F5E99">Humana</a> as an Advanced Analytics Engineering Intern. In the upcoming school year, I will be a research assistant at the <a href = "https://bcht.berkeley.edu/home" style="color: #8F5E99">Berkeley Center for Health Technology</a> under Professor Christopher Whaley.</p>
 
-	<p>In my free time, I enjoy <a href = "https://www.goodreads.com/user/show/7741912-violet">reading</a>, debating, and travelling. I currently serve as the President of the <a href="debate.html">Debate Society of Berkeley</a>.</p>
+	<p>In my free time, I enjoy <a href = "https://www.goodreads.com/user/show/7741912-violet">reading</a>, <a href="debate.html">debating</a>, and traveling. I currently serve as the President of the Debate Society of Berkeley.</p>
 
 		<footer>
 
