more hidden links

--- a/credits.html
+++ b/credits.html
@@ -14,7 +14,7 @@
 		  gtag('js', new Date());
 		  gtag('config', 'UA-141113114-1');
 		</script>
-		
+
 	</head>
 
 	<body>
@@ -23,10 +23,10 @@
 
 		<nav>
     		<ul>
-					<li><a href="index.html">Home</a></li>
-					<li><a href="about.html">About</a></li>
-					<li><a href="projects.html">Projects</a></li>
-					<li><a href="blog.html">Blog</a></li>
+					<li><a href="index.html" style="color: #8F5E99">Home</a></li>
+					<li><a href="about.html" style="color: #8F5E99">About</a></li>
+					<li><a href="projects.html" style="color: #8F5E99">Projects</a></li>
+					<li><a href="blog.html" style="color: #8F5E99">Blog</a></li>
     		</ul>
 		</nav>
 
