--- a/debate.html
+++ b/debate.html
@@ -24,7 +24,7 @@
 
 		<nav>
     		<ul>
-	        <li><a href="index.html" style="color: #8F5E99"><b>Home</b></a></li>
+	        <li><a href="index.html" style="color: #8F5E99">Home</a></li>
 					<li><a href="about.html" style="color: #8F5E99">About</a></li>
 					<li><a href="projects.html" style="color: #8F5E99">Projects</a></li>
 					<li><a href="blog.html" style="color: #8F5E99">Blog</a></li>
@@ -32,20 +32,21 @@
 		</nav>
 
 		<h2>Leadership</h2>
+			<h3>Debate Society of Berkeley</h3>
 			<p style="margin-left: 40px">2019- 2020: President</p>
 			<p style="margin-left: 40px">2018- 2019: Vice President</p>
 			<p style="margin-left: 40px">2017- 2018: Communications Director</p>
 
 		<h2>Accomplishments</h2>
 
-			<h3>2020 Worlds Universities Debating Championship Qualifier</h3>
-				<p style="margin-left: 40px">Assumption University, Bangkok, Thailand</p>
+			<h3>Qualifier</h3>
+				<p style="margin-left: 40px">2020 Worlds Universities Debating Championship, Thailand</p>
 
 			<h3>Varsity Finalist</h3>
 				<p style="margin-left: 40px">2019 Penguin Invitational, Dominican University</p>
 
 			<h3>Top Speaker</h3>
-				<p style="margin-left: 40px">5th Annual Steeltown Invitational, Los Medanos College</p>
+				<p style="margin-left: 40px">2018 Steeltown Invitational, Los Medanos College</p>
 
 		<footer>
 
@@ -70,7 +71,7 @@
 				</div>
 			</a>
 
-    	<p><small>© Violet Sinnarkar 2019 | <a href="credits.html">Credits</a></small></p>
+    	<p><small>© Violet Sinnarkar 2019 | <a href="credits.html" style="color: #8F5E99">Credits</a></small></p>
 
 		</footer>
 
