--- a/travel.html
+++ b/travel.html
@@ -24,20 +24,14 @@
 
 		<nav>
     		<ul>
-	        <li><a href="index.html" style="color: #8F5E99"><b>Home</b></a></li>
+	        <li><a href="index.html" style="color: #8F5E99">Home</a></li>
 					<li><a href="about.html" style="color: #8F5E99">About</a></li>
 					<li><a href="projects.html" style="color: #8F5E99">Projects</a></li>
 					<li><a href="blog.html" style="color: #8F5E99">Blog</a></li>
     		</ul>
 		</nav>
 
-	<p><img src="profile.jpg" class="profile"/></p>
-
-	<p>I am a senior at the University of California, Berkeley studying Data Science, with broad interests in distributed computing, optimization, and machine learning.</p>
-
-	<p>This summer, I am working at <a href = "https://www.humana.com/" style="color: #8F5E99">Humana</a> as an Advanced Analytics Engineering Intern. In the upcoming school year, I will be a research assistant at the <a href = "https://bcht.berkeley.edu/home" style="color: #8F5E99">Berkeley Center for Health Technology</a> under Professor Christopher Whaley.</p>
-
-	<p>In my free time, I enjoy <a href = "https://www.goodreads.com/user/show/7741912-violet">reading</a>, <a href="debate.html">debating</a>, and <a href="travel.html">traveling</a>. I currently serve as the President of the Debate Society of Berkeley.</p>
+		<iframe width="900" height="800" frameborder="0" scrolling="no" src="//plot.ly/~violetsinn/2.embed"></iframe>
 
 		<footer>
 
@@ -62,7 +56,7 @@
 				</div>
 			</a>
 
-    	<p><small>© Violet Sinnarkar 2019 | <a href="credits.html">Credits</a></small></p>
+    	<p><small>© Violet Sinnarkar 2019 | <a href="credits.html" style="color: #8F5E99">Credits</a></small></p>
 
 		</footer>
 
