--- a/travel.html
+++ b/travel.html
@@ -31,7 +31,7 @@
     		</ul>
 		</nav>
 
-		<iframe width="900" height="600" frameborder="0" scrolling="no" src="//plot.ly/~violetsinn/2.embed"></iframe>
+		<center><iframe width="800" height="600" frameborder="0" scrolling="no" src="//plot.ly/~violetsinn/2.embed"></iframe></center>
 
 		<footer>
 
