--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 				</div>
 			</a>
 
-    	<p ><small>© Violet Sinnarkar 2019 | <a href="credits.html" style="color: #8F5E99">Credits</a></small></p>
+    	<p ><small>© Violet Sinnarkar 2019 | <a style="color: #8F5E99" href="credits.html">Credits</a></small></p>
 
 		</footer>
 
