colors on about page

--- a/about.html
+++ b/about.html
@@ -24,10 +24,10 @@
 
 		<nav>
     		<ul>
-	        <li><a href="index.html">Home</a></b></li>
-					<li><a href="about.html"><b>About</b></a></li>
-					<li><a href="projects.html">Projects</a></li>
-					<li><a href="blog.html">Blog</a></li>
+	        <li><a style="color: #8F5E99" href="index.html">Home</a></b></li>
+					<li><a style="color: #8F5E99" href="about.html"><b>About</b></a></li>
+					<li><a style="color: #8F5E99" href="projects.html">Projects</a></li>
+					<li><a style="color: #8F5E99" href="blog.html">Blog</a></li>
     		</ul>
 		</nav>
 
@@ -81,7 +81,7 @@
 				</div>
 			</a>
 
-    	<p><small>© Violet Sinnarkar 2019 | <a href="credits.html">Credits</a></small></p>
+    	<p><small>© Violet Sinnarkar 2019 | <a style="color: #8F5E99" href="credits.html">Credits</a></small></p>
 
 		</footer>
 
