--- a/credits.html
+++ b/credits.html
@@ -1,7 +1,5 @@
 <html>
 
-	<meta name = "viewport" content = "width=device-width, initial-scale=1.0">
-
 	<head>
 		<title>Violet Sinnarkar</title>
 		<link rel = "stylesheet" type = "text/css" href = "css/main.css">
@@ -38,7 +36,7 @@
 	 	</ul>
 
 		<footer>
-			<p><small>© Violet Sinnarkar 2019 | <a href="credits.html"><b>Credits</b></a></small></p>
+			<p><small>© Violet Sinnarkar 2019 | <a href="credits.html" style = "color: #8F5E99"><b>Credits</b></a></small></p>
 
 		</footer>
 	</body>
