--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     		</ul>
 		</nav>
 
-	<p><img src="profile.jpg" class="image"/></p>
+	<p><img class="main_image" src="profile.jpg" /></p>
 
 	<p>I am a senior at the University of California, Berkeley studying Data Science, with broad interests in distributed computing, optimization, and machine learning.</p>
 
