--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
 <html>
 
-	<meta name = "viewport" content = "width=device-width, initial-scale=1.0">
-
 	<head>
 
 		<title>Violet Sinnarkar</title>
@@ -37,7 +35,7 @@
 
 	<p>This summer, I am working at <a href = "https://www.humana.com/" style="color: #8F5E99">Humana</a> as an Advanced Analytics Engineering Intern. In the upcoming school year, I will be a research assistant at the <a href = "https://bcht.berkeley.edu/home" style="color: #8F5E99">Berkeley Center for Health Technology</a> under Professor Christopher Whaley.</p>
 
-	<p>In my free time, I enjoy <a href = "https://www.goodreads.com/user/show/7741912-violet">reading</a>, <a href="debate.html">debating</a>, and <a href="travel.html">traveling</a>. I currently serve as the President of the Debate Society of Berkeley.</p>
+	<p>In my free time, I enjoy <a href = "https://www.goodreads.com/user/show/7741912-violet" style="color: #8F5E99">reading</a>, <a href="debate.html" style="color: #8F5E99">debating</a>, and <a href="travel.html" style="color: #8F5E99">traveling</a>. I currently serve as the President of the Debate Society of Berkeley.</p>
 
 		<footer>
 
