--- a/projects.html
+++ b/projects.html
@@ -13,7 +13,7 @@
 		  gtag('js', new Date());
 		  gtag('config', 'UA-141113114-1');
 		</script>
-		
+
 	</head>
 
 	<body>
@@ -24,7 +24,7 @@
     		<ul>
 					<li><a href="index.html">Home</a></li>
 					<li><a href="about.html">About</a></li>
-					<li><b><a href="projects.html">Projects</a></b></li>
+					<li><a href="projects.html"><b>Projects</b></b></li>
 					<li><a href="blog.html">Blog</a></li>
     		</ul>
 		</nav>
