adding footer to all pages

--- a/projects.html
+++ b/projects.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
 
 	<head>
@@ -22,22 +21,42 @@
 
 		<nav>
     		<ul>
-					<li><a href="index.html">Home</a></li>
-					<li><a href="about.html">About</a></li>
-					<li><a href="projects.html"><b>Projects</b></b></li>
-					<li><a href="blog.html">Blog</a></li>
+					<li><a href="index.html" style="color: #8F5E99">Home</a></li>
+					<li><a href="about.html" style="color: #8F5E99">About</a></li>
+					<li><a href="projects.html" style="color: #8F5E99"><b>Projects</b></b></li>
+					<li><a href="blog.html" style="color: #8F5E99">Blog</a></li>
     		</ul>
 		</nav>
 
-		<div class="container">
+		<center>
+			<p>This page is currently under construction.</p>
+		</center>
 
-<center><p>This page is currently under construction.</p></center>
-
-		</div>
 		<footer>
-    		<ul>
-    			<small>© Violet Sinnarkar</small>
-			</ul>
+
+			<a href = "https://www.linkedin.com/in/vasinnarkar/" target="_blank">
+				<div class = "icon">
+					<object height = 25px width= 25px type="image/svg+xml" data="linkedin.svg">
+					</object>
+				</div>
+			</a>
+
+			<a href = "https://twitter.com/violetsinn" target="_blank">
+				<div class = "icon">
+					<object height = 25px width= 25px type="image/svg+xml" data="twitter.svg">
+					</object>
+				</div>
+			</a>
+
+			<a href = "https://github.com/violetsinn" target="_blank">
+				<div class = "icon">
+					<object height = 25px width= 25px type="image/svg+xml" data="github.svg">
+					</object>
+				</div>
+			</a>
+
+    	<p ><small>© Violet Sinnarkar 2019 | <a style="color: #8F5E99" href="credits.html">Credits</a></small></p>
+
 		</footer>
-	</body>
+
 </html>
