--- a/about.html
+++ b/about.html
@@ -32,8 +32,8 @@
 
 		<h2>Education</h2>
 
-			<h3>University of California, Berkeley<span style="float:right;"> May 2020 </span> </h3>
-			<p style="margin-left: 40px">B.A. Data Science</p>
+			<h3>B.A. Data Science<span style="float:right;"> May 2020 </span> </h3>
+			<p style="margin-left: 40px">University of California, Berkeley</p>
 
 		<h2>Work</h2>
 
