--- a/travel.html
+++ b/travel.html
@@ -1,7 +1,5 @@
 <html>
 
-	<meta name = "viewport" content = "width=device-width, initial-scale=1.0">
-
 	<head>
 
 		<title>Violet Sinnarkar</title>
@@ -31,7 +29,9 @@
     		</ul>
 		</nav>
 
-		<center><iframe width="900" height="600" frameborder="0" scrolling="no" src="//plot.ly/~violetsinn/7.embed"></iframe></center>
+		<center>
+			<iframe width="900" height="600" frameborder="0" scrolling="no" src="//plot.ly/~violetsinn/7.embed"></iframe>
+		</center>
 
 		<footer>
 
