trying to change profile pic again...

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     		</ul>
 		</nav>
 
-	<p><img class="main_image" src="profile.jpg" /></p>
+	<p><img class="main_image" src="profile-2.jpg" /></p>
 
 	<p>I am a senior at the University of California, Berkeley studying Data Science, with broad interests in distributed computing, optimization, and machine learning.</p>
 
