--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
 
 	<p><img class="main_image" src="profile-2.jpg" /></p>
 
-	<p>I am a senior at the University of California, Berkeley studying Data Science, with broad interests in distributed computing, optimization, and machine learning.</p>
+	<p>I am a data scientist at Apple, focusing on applied statistical methods for experimentation and causal inference. I currently work on <a href = "https://tv.apple.com/" style="color: #8F5E99">Apple TV+</a>. My favorite shows are <i>Bad Sisters</i>, Shrinking, and Lessons in Chemistry.</p>
 
-	<p>This summer, I am working at <a href = "https://www.humana.com/" style="color: #8F5E99">Humana</a> as an Advanced Analytics Engineering Intern. In the upcoming school year, I will be a research assistant at the <a href = "https://bcht.berkeley.edu/home" style="color: #8F5E99">Berkeley Center for Health Technology</a> under Professor Christopher Whaley.</p>
+	<p>Prior to my time at Apple, I worked at Uber and Lyft. I have an undergraduate degree from Berkeley, where I led the debate team.</p>
 
-	<p>In my free time, I enjoy <a href = "https://www.goodreads.com/user/show/7741912-violet" style="color: #8F5E99">reading</a>, <a href="debate.html" style="color: #8F5E99">debating</a>, and <a href="travel.html" style="color: #8F5E99">traveling</a>. I currently serve as the President of the Debate Society of Berkeley.</p>
+	<p>In my free time, I enjoy <a href = "https://www.goodreads.com/user/show/7741912-violet" style="color: #8F5E99">reading</a>, running, and taking on various home improvement projects. </p>
 
 		<footer>
 
