add bio, goodreads icon

--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
 
 	<p><img class="main_image" src="profile-2.jpg" /></p>
 
-	<p>I am a data scientist at Apple, focusing on applied statistical methods for experimentation and causal inference. I currently work on <a href = "https://tv.apple.com/" style="color: #8F5E99">Apple TV+</a>. My favorite shows are <i>Bad Sisters</i>, Shrinking, and Lessons in Chemistry.</p>
+	<p>I am a data scientist at Apple, focusing on applied statistical methods for experimentation and causal inference. I currently work on <a href = "https://tv.apple.com/" style="color: #8F5E99">Apple TV+</a>. My favorite shows are <i>Bad Sisters</i>, <i>Shrinking</i>, and <i>Lessons in Chemistry</i>.</p>
 
 	<p>Prior to my time at Apple, I worked at Uber and Lyft. I have an undergraduate degree from Berkeley, where I led the debate team.</p>
 
-	<p>In my free time, I enjoy <a href = "https://www.goodreads.com/user/show/7741912-violet" style="color: #8F5E99">reading</a>, running, and taking on various home improvement projects. </p>
+	<p>In my free time, I enjoy <a href = "https://www.goodreads.com/user/show/7741912-violet" style="color: #8F5E99">reading</a>, running, and taking on various home improvement projects. I currently live in San Francisco. </p>
 
 		<footer>
 
@@ -46,9 +46,9 @@
 				</div>
 			</a>
 
-			<a href = "https://twitter.com/violetsinn" target="_blank">
+			<a href = "https://www.goodreads.com/user/show/7741912-violet" target="_blank">
 				<div class = "icon">
-					<object height = 25px width= 25px type="image/svg+xml" data="twitter.svg">
+					<object height = 25px width= 25px type="image/svg+xml" data="goodreads.png">
 					</object>
 				</div>
 			</a>
@@ -60,7 +60,7 @@
 				</div>
 			</a>
 
-    	<p ><small>© Violet Sinnarkar 2019 | <a style="color: #8F5E99" href="credits.html">Credits</a></small></p>
+    	<p ><small>© 2025 Violet Sinnarkar | <a style="color: #8F5E99" href="credits.html">Credits</a></small></p>
 
 		</footer>
 
