adding goodreads credit

--- a/credits.html
+++ b/credits.html
@@ -34,11 +34,11 @@
 		<ul>
 		 <li>LinkedIn by <a href="https://www.flaticon.com/authors/simpleicon">SimpleIcon</a></li>
 		 <li>GitHub by <a href="https://www.flaticon.com/authors/dave-gandy">Dave Gandy</a></li>
-		 <li>Twitter by <a href="https://www.flaticon.com/authors/elegant-themes">Elegant Themes</a></li>
+		 <li>Goodreads by <a href="https://www.flaticon.com/authors/riajulislam">Riajulislam</a></li>
 	 	</ul>
 
 		<footer>
-			<p><small>© Violet Sinnarkar 2019 | <a href="credits.html" style = "color: #8F5E99"><b>Credits</b></a></small></p>
+			<p><small>© 2025 Violet Sinnarkar | <a href="credits.html" style = "color: #8F5E99"><b>Credits</b></a></small></p>
 
 		</footer>
 	</body>
