--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<nav>
     		<ul>
 	        <li><a href="index.html" style="color: #8F5E99"><b>Home</b></a></li>
-					<li><a href="about.html" style="color: #8F5E99">About</a></li>
+					<li><a href="cv_20251005.pdf" style="color: #8F5E99">CV</a></li>
 					<li><a href="projects.html" style="color: #8F5E99">Projects</a></li>
 					<li><a href="blog.html" style="color: #8F5E99">Blog</a></li>
     		</ul>
@@ -33,7 +33,7 @@
 
 	<p>I am a data scientist at Apple, focusing on applied statistical methods for experimentation and causal inference. I currently work on <a href = "https://tv.apple.com/" style="color: #8F5E99">Apple TV+</a>. My favorite shows are <i>Bad Sisters</i>, <i>Shrinking</i>, and <i>Lessons in Chemistry</i>.</p>
 
-	<p>Prior to my time at Apple, I worked at Uber and Lyft. I have an undergraduate degree from Berkeley, where I led the debate team.</p>
+	<p>Before joining Apple, I worked at Uber and Lyft. I also earned an undergraduate degree from Berkeley, where I led the debate team.</p>
 
 	<p>In my free time, I enjoy <a href = "https://www.goodreads.com/user/show/7741912-violet" style="color: #8F5E99">reading</a>, running around San Francisco, and taking on various home improvement projects. You can contact me at violets [at] apple [dot] com. </p>
 
