--- a/credits.html
+++ b/credits.html
@@ -24,7 +24,7 @@
 		<nav>
     		<ul>
 					<li><a href="index.html" style="color: #8F5E99">Home</a></li>
-					<li><a href="about.html" style="color: #8F5E99">About</a></li>
+					<li><a href="cv_20251005.pdf" style="color: #8F5E99">CV</a></li>
 					<li><a href="projects.html" style="color: #8F5E99">Projects</a></li>
 					<li><a href="blog.html" style="color: #8F5E99">Blog</a></li>
     		</ul>
