--- a/credits.html
+++ b/credits.html
@@ -25,7 +25,7 @@
     		<ul>
 					<li><a href="index.html" style="color: #8F5E99">Home</a></li>
 					<li><a href="cv_20251005.pdf" style="color: #8F5E99">CV</a></li>
-					<li><a href="projects.html" style="color: #8F5E99">Projects</a></li>
+					<li><a href="poetry.html" style="color: #8F5E99">Poetry</a></li>
 					<li><a href="blog.html" style="color: #8F5E99">Blog</a></li>
     		</ul>
 		</nav>
