--- a/poetry.html
+++ b/poetry.html
@@ -22,15 +22,29 @@
 		<nav>
     		<ul>
 					<li><a href="index.html" style="color: #8F5E99">Home</a></li>
-					<li><a href="about.html" style="color: #8F5E99">About</a></li>
-					<li><a href="projects.html" style="color: #8F5E99"><b>Projects</b></b></li>
+					<li><a href="cv_20251005.pdf" style="color: #8F5E99">CV</a></li>
+					<li><a href="poetry.html" style="color: #8F5E99">Poetry</a></li>
 					<li><a href="blog.html" style="color: #8F5E99">Blog</a></li>
     		</ul>
 		</nav>
 
-		<center>
-			<p>This page is currently under construction.</p>
-		</center>
+		<input type="text" id="filterInput" onkeyup="filterTable()" placeholder="Filter by any value..." style="width: 50%; padding: 6px; margin-top: 20px;">
+
+		<table id="literatureTable" style="width: 100%; border-collapse: collapse; margin-top: 20px;">
+    			<thead>
+        			<tr>
+            			<th>Title</th>
+            			<th>Author</th>
+            			<th>Year Published</th>
+            			<th>Era</th>
+            			<th>Theme</th>
+            			<th>Author Nationality</th>
+        		</tr>
+    		</thead>
+    		<tbody>
+        	<!-- Fill in works later -->
+    		</tbody>
+		</table>
 
 		<footer>
 
@@ -58,5 +72,7 @@
     	<p ><small>© Violet Sinnarkar 2019 | <a style="color: #8F5E99" href="credits.html">Credits</a></small></p>
 
 		</footer>
+
+	</body>
 
 </html>
