test quote above table

--- a/poetry.html
+++ b/poetry.html
@@ -28,17 +28,21 @@
     		</ul>
 		</nav>
 
-		<input type="text" id="filterInput" onkeyup="filterTable()" placeholder="Filter by any value..." style="width: 50%; padding: 6px; margin-top: 20px;">
+		<blockquote>
+		Poetry is not only dream and vision; it is the skeleton architecture of our lives. It lays the foundations for a future of change, a bridge across our fears of what has never been before.
+		<br>
+		-Audre Lorde, <i>Poetry Is Not A Luxury</i>
+		</blockquote>
 
-		<table id="literatureTable" style="width: 100%; border-collapse: collapse; margin-top: 20px;">
+		<table id="poetryTable" style="width: 100%; border-collapse: collapse; margin-top: 20px;">
     			<thead>
         			<tr>
             			<th>Title</th>
             			<th>Author</th>
+				<th>Nationality</th>
             			<th>Year Published</th>
             			<th>Era</th>
             			<th>Theme</th>
-            			<th>Author Nationality</th>
         		</tr>
     		</thead>
     		<tbody>
